# algo-trading

./: AlgoTrading.ipynb  README.md  TSLA1.csv  algo.ipynb  logging_config.py  pyproject.toml  trained.csv
deploy/: docker-compose.yaml
src/app/: pyproject.toml
src/app/src/: TickData.py  alpaca_data.py  alpaca_trader.py  back_trader.py  cli.py  cli_crypto.py  cli_crypto_sma.py  cli_v2.py  constants.py  logger_config.py  notify.py  real_time_trader.py  run.py  tick_data.py  trade_analyzer.py  voice_alert.py
src/app/test/: test_alpaca_stream_data.py  test_backtrader_strategy.py
src/broker/: __init__.py  alpaca_data.py  alpaca_trader.py  tick_data.py  trading_view_output5.csv  trading_view_stream.py
src/broker/src/: alpaca_crypto_trader.py  (+5 more)
src/datas/: AAPL.csv  GOOGL10 copy.csv  GOOGL10.csv  GOOGL10_3.csv  GOOGL10_4.csv  SPA.csv  SQ10.csv  TSLA10.csv  TSLA100.csv  TSLA6.csv  crypto6.csv  data.csv  dummy_stock_data.csv  slopes.csv  stat2023-07-31 15:24:44.800755.csv  stat2023-07-31 15:24:55.765270.csv  stat2023-07-31 15:25:38.112257.csv  stat2023-07-31 15:26:14.701371.csv  stat2023-07-31 15:26:52.621177.csv  stat2023-08-02 18:04:30.894035.csv  stat2023-08-02 18:04:30.908001.csv  stat2023-08-02 18:04:30.911904.csv  stat2023-08-02 18:04:30.912071.csv  stat2023-08-02 18:04:30.915686.csv  stat2023-08-02 18:04:30.916546.csv  stat2023-08-02 18:04:30.924949.csv  stat2023-08-03 01:04:35.291169.csv  stat2023-08-03 01:04:35.291510.csv  stat2023-08-03 01:04:35.293822.csv  stat2023-08-03 01:04:35.295426.csv  stat2023-08-03 01:04:35.304501.csv  stat2023-08-03 01:04:35.309620.csv  stat2023-08-03 01:04:35.313030.csv  stat2023-08-03 10:35:54.126854.csv  stat2023-08-03 10:35:54.128569.csv  stat2023-08-03 10:35:54.144376.csv  stat2023-08-03 10:35:54.153911.csv  stat2023-08-03 10:35:54.157517.csv  stat2023-08-03 10:35:54.161547.csv  stat2023-08-03 10:35:54.172694.csv  (+51 more)
src/pipeline/: pyproject.toml
src/strategies/: __init__.py  pyproject.toml
(+93 files in other folders)
