
[project]
name = "algo_trading"
version = "0.1"
description = ""
authors = [
    {name = "Madushika Pramod", email = "madushika4@gmail.com"},
]
dependencies = [
    "backtrader>=1.9.78.123",
    "pandas>=2.0.3",
    "Matplotlib>=3.7.2",
    "requests>=2.31.0",
    "websocket>=0.2.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]
src_layout = true

[tool.pdm.scripts]
test = "python -m unittest discover"