
[project]
name = "algo_trading"
version = "0.1"
description = ""
authors = [
    {name = "Madushika Pramod", email = "madushika4@gmail.com"},
]
dependencies = [
    "backtrader>=1.9.78.123",
    "pandas>=2.0.3",
    "Matplotlib>=3.7.2",
    "requests>=2.31.0",
    "websocket>=0.2.1",
    "Alpaca-py>=0.9.0",
    "websocket-client>=1.6.1",
    "TA-Lib>=0.4.28",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
src_layout = true

[tool.pdm.scripts]
test = "python -m unittest discover"
#algo = "pdm run src/app/src/cli_v2.py"
algo = "pdm run python src/app/src/run.py --run algo"
tune = "pdm run python src/app/src/run.py --run tune"
data = "pdm run python src/app/src/run.py --run data"
